--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ Flask-Migrate==4.0.5
 Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
-greenlet==2.0.2
+gunicorn==22.0.0
 h11==0.14.0
 idna==3.4
 itsdangerous==2.1.2
@@ -22,6 +22,7 @@ Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.3
 mysql-connector==2.2.9
+mysql-connector-python==8.4.0
 python-engineio==4.7.1
 python-socketio==5.9.0
 requests==2.31.0
@@ -32,3 +33,5 @@ urllib3==2.0.6
 Werkzeug==2.3.7
 wsproto==1.2.0
 WTForms==3.0.1
+proglog==0.1.10
+psycopg2-binary
