--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
 Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.0.5
+Flask-Bootstrap==3.3.7.1
 Flask-WTF==1.1.1
 gunicorn==22.0.0
 h11==0.14.0
